# mouseget_Kinect2_Pixel_value

./: CMakeLists.txt  README.md  mouseget.cpp
